Changes since version 3.2.0
---------------------------     

- All local methods on a proxy that return the "same" proxy with
  a different attribute (such as ice_oneway and ice_secure) now return
  a proxy of the same class as the original. As a result, once you
  have downcast a proxy, it will rarely be necessary to downcast it
  again. For example, you can rewrite the following statements

  twoway = Demo::HelloPrx::checkedCast(...)
  oneway = Demo::HelloPrx::uncheckedCast(twoway.ice_oneway())

  as simply

  twoway = Demo::HelloPrx::checkedCast(...)
  oneway = twoway.ice_oneway()

  The local methods ice_facet and ice_identity still return a proxy of
  the base class Ice::ObjectPrx, since a change to the proxy's facet
  or identity typically refers to an object with a different Slice
  type and therefore requires a new downcast.

  This change does not affect the behavior of existing code. However,
  code that depends on these new semantics will not run correctly
  using prior versions of Ice.

- Fixed bugs in stringToProxy and propertyToProxy that reported a
  "NullHandleException".

Changes since version 3.1.1
---------------------------     

- Ice for Ruby is now compatible with ruby 1.8.1.

- Fixed a bug in Application::holdInterrupt.

- Fixed a bug that would cause the extension to abort if a GC occurred
  after the communicator was destroyed.

- Fixed a code-generation bug that occurred when the name of a data
  member begins with an uppercase letter.

- Changed the mapping of sequence<byte> for performance reasons:

  - A string is now accepted as a legal value when sequence<byte> is
    expected. An array of integers is also accepted, but the Ice run
    time validates every element of the array to ensure it is in the
    proper range, therefore using an array is much slower than using
    a string.

  - A sequence<byte> value is now always received as a string.

- Added the property Ice.Default.EndpointSelection. If not defined,