@@ -48,14 +48,38 @@ class D
     bool postUnmarshalInvoked();
 };
 
+interface I
+{
+};
+
+interface J extends I
+{
+};
+
+class H implements I
+{
+};
+
+class K implements J
+{
+};
+
 class Initial
 {
     void shutdown();
+
     B getB1();
     B getB2();
     C getC();
     D getD();
+
     void getAll(out B b1, out B b2, out C theC, out D theD);
+
+    I getI();
+    I getJ();
+    I getH();
+
+    void setI(I theI);
 };
 
 };
